samples/_failures_safe/1761129431_8476c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3366ac92.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_3366ac92.c:196:33: error: expected ‘;’ at end of input
  196 |             start = graph->nodes
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_3366ac92.c:196:13: error: expected declaration or statement at end of input
  196 |             start = graph->nodes
      |             ^~~~~
./samples/SAFE/__tmp_3366ac92.c:196:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3366ac92.c:196:13: error: expected declaration or statement at end of input
